- Added KeyedLazy - Added Gatherer as Collector methods - Improved robustness of PrimitiveAtomicIterator(s) - Reduce use of unnecessary util.concurrent.Atomic classes